лаба4/инъекции/практика2/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labatamiya
spec:
  replicas: 3
  selector:
    matchLabels:
      app: labatamiya
  template:
    metadata:
      labels:
        app: labatamiya
    spec:
      containers:
        - name: labatamiya
          image: labatamiya
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: labatamiya
spec:
  selector:
    app: labatamiya
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
