лаба4/инъекции/практика2/kube_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labatamiya
spec:
  replicas: 2
  selector:
    matchLabels:
      app: labatamiya
  template:
    metadata:
      labels:
        app: labatamiya
    spec:
      containers:
        - name: labatamiya
          image: labatamiya
          ports:
            - containerPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: labatamiya-service
spec:
  type: ClusterIP
  selector:
    app: labatamiya
  ports:
    - port: 80
      targetPort: 3001
