лаба4/инъекции/практика2/portainer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app: portainer
    spec:
      containers:
        - name: portainer
          image: portainer/portainer-ce:latest
          ports:
            - containerPort: 9443
          volumeMounts:
            - mountPath: /data
              name: portainer-data
            - mountPath: /var/run/docker.sock
              name: docker-sock
      volumes:
        - name: portainer-data
          persistentVolumeClaim:
            claimName: portainer-data-pvc
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
---
apiVersion: v1
kind: Service
metadata:
  name: portainer
spec:
  selector:
    app: portainer
  ports:
    - protocol: TCP
      port: 9443
      targetPort: 9443
