лаба4/инъекции/практика2/homepage-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: homepage
spec:
  hosts:
    - "*"
  gateways:
    - homepage-gateway
  http:
    - route:
        - destination:
            host: homepage
            port:
              number: 80
          weight: 100
      timeout: 10s
      retries:
        attempts: 3
        perTryTimeout: 2s
      sticky:
        httpCookie:
          name: user
          ttl: 3600
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: homepage
spec:
  host: homepage
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: user
          ttl: 3600
